--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap");
 
-html,
-body,
-#root,
-.app,
-.content {
-  height: 100%;
-  width: 100%;
+body {
+  margin: 0;
+  padding: 0;
   font-family: "Source Sans Pro", sans serif;
   background-color: #32353e;
 }
 
-.app {
-  display: flex;
-  position: relative;
-}
-
-::-web
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+ 
