--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,9 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Source Sans Pro", sans serif;
-  background-color: #32353e;
+  background-color: #f0f0f0;
 }
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
- 
